--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ php:
     - 5.5
     - 5.4
     - hhvm
-script: phpunit test
+script: phpunit
 
 before_script:
-    - php composer dump-autoload
+    - php composer install
 
